--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@elevenlabs/react": "^0.1.7",
+    "@elevenlabs/elevenlabs-js": "^2.0.1",
+    "@elevenlabs/react": "^0.1.5",
     "@supabase/supabase-js": "^2.39.0",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.344.0",
+    "next": "15.2.4",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "voice-stream": "^1.0.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
+    "@elevenlabs/client": "^0.1.7",
     "@eslint/js": "^9.9.1",
+    "@types/dotenv": "^6.1.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "axios": "^1.9.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
