--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@elevenlabs/react": "^0.1.7",
     "@supabase/supabase-js": "^2.39.0",
     "lucide-react": "^0.344.0",
+    "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.1"
@@ -32,8 +33,5 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
